--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "my-app",
+  "name": "payuguru",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-fade-in": "^2.0.1",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "smooth-scrollbar-react": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
