--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "encrypt-storage": "^2.12.15",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-animation-on-scroll": "^5.1.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-fade-in": "^2.0.1",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "smooth-scrollbar-react": "^2.4.1",
